# kata-machine

./: package.json
go/: go.mod
go/algorithms/search/: binarysearch.go  twocrystalballs.go
go/tests/: binarysearch_test.go  twocrystalballs_test.go
python/: README.md  pyproject.toml
python/algorithms/: binary_search.py
python/tests/: test_binary_search.py
src/day1/: BinarySearchList.go  BinarySearchList.ts  LinearSearchList.go  TwoCrystalBalls.go
typescript/: pnpm-lock.yaml
typescript/src/__tests__/: TwoCrystalBalls.ts
typescript/src/day1/: TwoCrystalBalls.ts
